Fixed menu on mobile

--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -20,14 +20,15 @@
 *::selection {
   background-color: $color-fill-light;
 }
-html {
+html,
+body {
   height: 100%;
 }
-body {
-  // max-width: calc(100vw - (100vw - 100%));
-  // max-width: 100%;
-  // height: 100%;
-}
+// body {
+//   // max-width: calc(100vw - (100vw - 100%));
+//   // max-width: 100%;
+//   // height: 100%;
+// }
 
 html {
   scroll-behavior: smooth;
